PE_4_project/force-app/main/default/objects/Library_Member__c/Library_Member__c.object-meta.xml
<CustomObject>
    <description>Stores library member information for the Library Management System</description>
    <label>Library Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>