PE_4_project/force-app/main/default/objects/Library_Member__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Residential address of the library member</description>
    <label>Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>