PE_4_project/force-app/main/default/objects/Library_Member__c/fields/Books_Issued__c.field-meta.xml
<CustomField>
    <fullName>Books_Issued__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of books currently issued to this member</description>
    <label>Books Issued</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>