PE_4_project/force-app/main/default/objects/Library_Member__c/fields/Membership_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Date__c</fullName>
    <description>Date the member joined the library</description>
    <label>Membership Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>