PE_4_project/force-app/main/default/objects/Library_Member__c/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <description>Current membership status</description>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>