PE_4_project/force-app/main/default/objects/Library_Member__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number of the library member</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>